# ai-teacher-agent

./: .env.example  .gitignore  .mcp.json  ERROR_HANDLING_IMPROVEMENT.md  FIX_500_ERROR_GUIDE.md  HISTORY_FIX_REPORT.md  HISTORY_ISSUE_DIAGNOSIS.md  README.md  STORE_PERSISTENCE_TEST_REPORT.md  checkpoints.sqlite  debug_chinese.py  debug_chinese_output.txt  fix_error_handling.py  pyproject.toml  requirements.txt  restart_test.db  temp_rag_list.txt  test_checkpoint.py  test_chroma_rag.py  test_connectivity.sh  test_history_fix.py  test_learning.py  test_marketing_api.py  test_planner.py  test_rag_api.py  test_store.db  test_store_persistence.py  test_supervisor.py  threads.db  web_sim.json  产品需求文档.md  仓库合集.md  启动方式.md  复用方案.md  已实现功能详细清单.md  缺口  项目上下文文档.md  项目全面分析  项目架构文档.md
.claude/: CLAUDE.md  README.md  commands.json  settings.local.json
ai_teacher_nexus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chroma_db/: chroma.sqlite3
chroma_financial_db/: chroma.sqlite3
config/: README.md  capability.yaml  services.yaml  settings.py
data/: README.md  checkpoints.sqlite-shm  checkpoints.sqlite-wal  knowledge.db  rag_metadata.db  user_preferences.db
frontend/: .env.example  DEPLOY.md  README.md  package-lock.json  package.json
logs/: audit.jsonl
scripts/: README.md  init_knowledge.py  init_knowledge_db.py  rag_manager.py  reingest_knowledge_base.py  setup_services.py  test_ensemble_retriever.py  test_json_repair.py  test_multimodal_features.py  test_multimodal_services.py  test_parent_child.py  test_reranker.py  test_semantic_chunking.py  test_transcribe.py
(+191 files in other folders)
